--- a/vision-derive/Cargo.toml
+++ b/vision-derive/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [lib]
 proc-macro = true
+workspace = ["vision-derive-test"]
 
 [dependencies]
 syn = { version = "1.0", features = ["full"] }
