--- a/vision-derive/vision-derive-test/Cargo.toml
+++ b/vision-derive/vision-derive-test/Cargo.toml
@@ -12,4 +12,4 @@ vision-utils = { path = "../../" }
 wasm-bindgen = "0.2"
 serde = "1.0.145"
 serde_json = "1.0.86"
-wasmer = "2.3.0"
+wasmer = { version = "2.3.0", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
