--- a/vision-derive/Cargo.toml
+++ b/vision-derive/Cargo.toml
@@ -9,3 +9,4 @@ beacon_dao_allocator = { package = "beacon_dao-allocator", git = "ssh://git@gith
 vision-utils = { path = "../" }
 wasmer = { version = "2.3.0", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
 serde_json = "1.0.87"
+serde = "1.0.147"
