Use wasmer 3.0 for native closure support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 members = ["vision-derive-internal", "vision-derive-internal", "vision-derive"]
 
 [dependencies]
-wasmer = { version = "2.3.0", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
+wasmer = { version = "3.0.0-rc.1", features = ["js", "std", "wasm-types-polyfill"], default-features = false }
