--- a/vision-derive-internal/Cargo.toml
+++ b/vision-derive-internal/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
-syn = { version = "1.0", features = ["full"] }
+syn = { version = "1.0", features = ["full", "extra-traits"] }
 proc-macro2 = "1.0.46"
 quote = "1.0"
 itertools = "0.10.5"
