--- a/vision-derive-internal/Cargo.toml
+++ b/vision-derive-internal/Cargo.toml
@@ -11,3 +11,4 @@ syn = { version = "1.0", features = ["full", "extra-traits", "clone-impls"] }
 proc-macro2 = "1.0.46"
 quote = "1.0"
 itertools = "0.10.5"
+sha2 = "0.10.6"
