--- a/vision-derive/Cargo.toml
+++ b/vision-derive/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 vision-derive-internal = { path = "../vision-derive-internal" }
-beacon_dao_allocator = { package = "beacon_dao-allocator", git = "ssh://git@github.com/Vision-DAO/beacon-dao.git", features = [] }
+beacon_dao_allocator = { package = "beacon_dao-allocator_manager", git = "ssh://git@github.com/Vision-DAO/beacon-dao.git", features = [] }
 vision-utils = { path = "../" }
 serde_json = "1.0.87"
 serde = "1.0.147"
