--- a/vision-derive/Cargo.toml
+++ b/vision-derive/Cargo.toml
@@ -3,9 +3,13 @@ name = "vision-derive"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["dep:beacon_dao_allocator"]
+no_alloc = []
+
 [dependencies]
 vision-derive-internal = { path = "../vision-derive-internal" }
-beacon_dao_allocator = { package = "beacon_dao-allocator", git = "ssh://git@github.com/Vision-DAO/beacon-dao.git", features = [] }
+beacon_dao_allocator = { package = "beacon_dao-allocator", git = "ssh://git@github.com/Vision-DAO/beacon-dao.git", features = [], optional = true }
 vision-utils = { path = "../" }
 serde_json = "1.0.87"
 serde = "1.0.147"
