--- a/vision-derive/Cargo.toml
+++ b/vision-derive/Cargo.toml
@@ -9,7 +9,7 @@ no_alloc = []
 
 [dependencies]
 vision-derive-internal = { path = "../vision-derive-internal" }
-beacon_dao_allocator = { package = "beacon_dao-allocator", git = "ssh://git@github.com/Vision-DAO/beacon-dao.git", features = [], optional = true }
+beacon_dao_allocator = { package = "beacon_dao-allocator", git = "https://github.com/Vision-DAO/beacon-dao", features = [], optional = true }
 vision-utils = { path = "../" }
 serde_json = "1.0.87"
 serde = "1.0.147"
