Revert "Add a test project for with_bindings."
This reverts commit 75e19c1c54a4bfbdbe9dd7e26a3d278c872ff890.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [workspace]
-members = ["vision-derive-internal", "vision-derive-internal", "with_bindings_test", "vision-derive"]
+members = ["vision-derive-internal", "vision-derive-internal", "vision-derive"]
